--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-18T14:52:13Z</date>
+						<date>2019-03-19T16:50:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F0MguE3SyAZB
-								Wzf1We/Rtw==
+								oRkL19AEUxTo
+								BItH4J9y4g==
 								</data>
 								<key>Size</key>
-								<integer>122207</integer>
+								<integer>123008</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
