--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -10,14 +10,14 @@
 	<key>pageInspectorVisible</key>
 	<true/>
 	<key>projectViewVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
 	<key>selectedInspectorTab</key>
 	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page55</string>
+		<string>page52</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
